parser/src/tests/corpus/negatives/bare-inquiry/expected
Error from "negatives/bare-inquiry/input", line 1:
| $x
| ^^
|
+-> Syntax error: pure expressions cannot contain inquiry effects, e.g. `$…`

